small fixes: pronounces and spacing

--- a/index.css
+++ b/index.css
@@ -209,7 +209,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 1;
   grid-column: 1;
 }
@@ -218,7 +217,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 1;
   grid-column: 2;
 }
@@ -227,7 +225,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 1;
   grid-column: 3;
 }
@@ -236,7 +233,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 2;
   grid-column: 1;
 }
@@ -245,7 +241,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 2;
   grid-column: 2;
 }
@@ -254,7 +249,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 2;
   grid-column: 3;
 }
@@ -263,7 +257,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 3;
   grid-column: 1;
 }
@@ -272,7 +265,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 3;
   grid-column: 2;
 }
@@ -281,7 +273,6 @@
   text-align: center;
   font-style: italic;
   font-size: smaller;
-  background-color: #81d4fa;
   grid-row: 3;
   grid-column: 3;
 }
